[gd_scene load_steps=16 format=3 uid="uid://coglbcstsgt2p"]

[ext_resource type="Script" path="res://scripts/beggar.gd" id="1_6xerf"]
[ext_resource type="Texture2D" uid="uid://bj46euctw5uhk" path="res://assets/MinifolksVillagers/Blue/Outline/MiniSuspiciousMerchantB.png" id="2_hosnf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_840eq"]
atlas = ExtResource("2_hosnf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrase"]
atlas = ExtResource("2_hosnf")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjmqi"]
atlas = ExtResource("2_hosnf")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hgeb"]
atlas = ExtResource("2_hosnf")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgr0d"]
atlas = ExtResource("2_hosnf")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y01ma"]
atlas = ExtResource("2_hosnf")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6txgd"]
atlas = ExtResource("2_hosnf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1xim"]
atlas = ExtResource("2_hosnf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsuf7"]
atlas = ExtResource("2_hosnf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fme86"]
atlas = ExtResource("2_hosnf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kfu48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_840eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrase")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjmqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hgeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgr0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y01ma")
}],
"loop": true,
"name": &"running",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6txgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1xim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsuf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fme86")
}],
"loop": true,
"name": &"standing",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jn7u"]
size = Vector2(30.25, 44.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2xcvr"]
radius = 112.0

[node name="beggarGuy" type="CharacterBody2D"]
script = ExtResource("1_6xerf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kfu48")
animation = &"running"
frame = 1
frame_progress = 0.0242839

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.875, 33.75)
shape = SubResource("RectangleShape2D_4jn7u")

[node name="conversationRange" type="Area2D" parent="."]
position = Vector2(0, 32)
collision_layer = 2
collision_mask = 2

[node name="convoRangeCollision" type="CollisionShape2D" parent="conversationRange"]
shape = SubResource("CircleShape2D_2xcvr")

[node name="toolTip" type="Label" parent="."]
offset_left = -72.0
offset_top = 80.0
offset_right = 70.0
offset_bottom = 103.0
text = "press enter to talk"

[connection signal="body_entered" from="conversationRange" to="." method="_on_conversation_range_body_entered"]
[connection signal="body_exited" from="conversationRange" to="." method="_on_conversation_range_body_exited"]
